# cxx_timed_callbacks

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  README.md
include/: CMakeLists.txt  cxx_timer_callbacks.hpp  template.hpp
libs/: CMakeLists.txt
src/: CMakeLists.txt  cxx_timer_callbacks.cpp  gcd.hpp
test/: CMakeLists.txt  test_gcd.cpp  timer_callback_test.cpp
